Collada export, does not take "diffuse" value from material's 'base color' when nodes are disabled #69090

Closed
opened 2019-08-23 16:32:02 +02:00 by Gilles Gagnon · 13 comments

System Information
Operating system: WIN 10
Graphics card: Quadro P1000

Blender Version
Broken: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f5449, type:
build date: 2019-07-29, 09:44 AM
Worked: 2.79b

Assigning a material with color directly to faces in 2.80 and exporting it as a .DAE (Collada) works fine.

Direct Red DAE XML.PNG

Assigning a material with color from a library (Material Library VX add-on) and exporting the file as a .DAE (Collada) doesn't work. The color doesn't get assigned to the "diffuse" property.

Library Red DAE XML.PNG

Exact steps for others to reproduce the error

I apologize if I'm repeating a known bug (I did try to search). I am also not a programmer and am using Blender for the first time, so pardon any mistakes in nomenclature or process...

Here is a .Blend file of a cube colored with a material created from scratch:

Direct_red.blend

Here is a .Blend file of a cube colored with a material from a library (I hope the file contains the info?):

Library_red.blend

  1. Open the Direct_red.Blend. Export to .DAE. Import this DAE and notice the color is correct.
  2. Open the Library_red.Blend. Export to .DAE. Import this DAE and notice the color is default.
**System Information** Operating system: WIN 10 Graphics card: Quadro [P1000](https://archive.blender.org/developer/P1000.txt) **Blender Version** Broken: 2.80 (sub 75), branch: master, commit date: 2019-07-29 14:47, hash: f6cb5f54494e, type: build date: 2019-07-29, 09:44 AM Worked: 2.79b Assigning a material with color directly to faces in 2.80 and exporting it as a .DAE (Collada) works fine. ![Direct Red DAE XML.PNG](https://archive.blender.org/developer/F7694314/Direct_Red_DAE_XML.PNG) Assigning a material with color from a library (Material Library VX add-on) and exporting the file as a .DAE (Collada) doesn't work. The color doesn't get assigned to the "diffuse" property. ![Library Red DAE XML.PNG](https://archive.blender.org/developer/F7694318/Library_Red_DAE_XML.PNG) **Exact steps for others to reproduce the error** I apologize if I'm repeating a known bug (I did try to search). I am also not a programmer and am using Blender for the first time, so pardon any mistakes in nomenclature or process... Here is a .Blend file of a cube colored with a material created from scratch: [Direct_red.blend](https://archive.blender.org/developer/F7694330/Direct_red.blend) Here is a .Blend file of a cube colored with a material from a library (I hope the file contains the info?): [Library_red.blend](https://archive.blender.org/developer/F7694334/Library_red.blend) 1) Open the Direct_red.Blend. Export to .DAE. Import this DAE and notice the color is correct. 2) Open the Library_red.Blend. Export to .DAE. Import this DAE and notice the color is default.
Author

Added subscriber: @ggagnon

Added subscriber: @ggagnon
Member

Added subscriber: @JacquesLucke

Added subscriber: @JacquesLucke
Member

Changed status from 'Needs Triage' to: 'Needs User Info'

Changed status from 'Needs Triage' to: 'Needs User Info'
Member

I can reproduce the issue. The issue is probably that only the node tree is evaluated to figure out the diffuse color. In the second file, the node tree has not been created yet. For me it works after I clicked on "Use Nodes".

image.png

@ggagnon can you confirm that this is the issue you describe?

I can reproduce the issue. The issue is probably that only the node tree is evaluated to figure out the diffuse color. In the second file, the node tree has not been created yet. For me it works after I clicked on "Use Nodes". ![image.png](https://archive.blender.org/developer/F8292057/image.png) @ggagnon can you confirm that this is the issue you describe?
Author

I am not entirely sure what you are asking, so I tried:

Assigned a material library color to the default cube and exported to .DAE. Then I re-imported the DAE, clicked on 'use nodes' and the color is still not correct.

Assigned a material library color to the default cube when 'use node' (I think this actually turns it off (bar goes grey) is selected and exported to .DAE. Then I re-imported the DAE and the color is still not correct, regardless of whether I click on 'use nodes' or not.

I am not entirely sure what you are asking, so I tried: Assigned a material library color to the default cube and exported to .DAE. Then I re-imported the DAE, clicked on 'use nodes' and the color is still not correct. Assigned a material library color to the default cube when 'use node' (I think this actually turns it off (bar goes grey) is selected and exported to .DAE. Then I re-imported the DAE and the color is still not correct, regardless of whether I click on 'use nodes' or not.
Member
  1. Open library_red.blend.
  2. Click on Use Nodes in the material panel as shown in the screenshot above.
  3. Export the cube with Collada.
  4. Open a new file and import the just exported file.

In my case, the newly imported cube is red.

Maybe I understand the problem incorrectly,

1. Open `library_red.blend`. 2. Click on `Use Nodes` in the material panel as shown in the screenshot above. 3. Export the cube with Collada. 4. Open a new file and import the just exported file. In my case, the newly imported cube is red. Maybe I understand the problem incorrectly,
Author

OK!

  • When I open Blender 2.8 with the default cube, and click on Surfaces, "Use Nodes" is ON.
  • I scroll down to my material library and refresh it to pop up my color presets, "Use Nodes" is ON.
  • I select my color preset, "Use Nodes" is still ON.
  • I assign my color preset to the cube, "Use Nodes" turns OFF by itself.

At which point, I would export to Collada and never think to go turn what was ON and turned itself OFF, back to ON. Not that I even knew "Use Nodes" was an option before submitting this ticket. I'm completely new to Blender.

Now, our CAD software outputs .STL files, which we have to painstakingly paint in Blender and save as Collada (.DAE) because Collada files actually save color info, where .STL files do not.

So I have to ask, what is the point of EVER allowing Collada files to save without the color info, ie: with "Use Nodes" turned OFF?

That being said, I suspect that our Material Library file just needs to be saved with "Use Nodes" turned on? This material library file was created in Blender 2.79b and I had the misfortune of trying to use it in Blender 2.8. I will try it.

OK! - When I open Blender 2.8 with the default cube, and click on Surfaces, "Use Nodes" is ON. - I scroll down to my material library and refresh it to pop up my color presets, "Use Nodes" is ON. - I select my color preset, "Use Nodes" is still ON. - I assign my color preset to the cube, "Use Nodes" turns OFF by itself. At which point, I would export to Collada and never think to go turn what was ON and turned itself OFF, back to ON. Not that I even knew "Use Nodes" was an option before submitting this ticket. I'm completely new to Blender. Now, our CAD software outputs .STL files, which we have to painstakingly paint in Blender and save as Collada (.DAE) because Collada files actually save color info, where .STL files do not. So I have to ask, what is the point of EVER allowing Collada files to save without the color info, ie: with "Use Nodes" turned OFF? That being said, I suspect that our Material Library file just needs to be saved with "Use Nodes" turned on? This material library file was created in Blender 2.79b and I had the misfortune of trying to use it in Blender 2.8. I will try it.
Member

Changed status from 'Needs User Info' to: 'Confirmed'

Changed status from 'Needs User Info' to: 'Confirmed'
Member

So I have to ask, what is the point of EVER allowing Collada files to save without the color info, ie: with "Use Nodes" turned OFF?

That is a bug, actually. I was just making sure that we are talking about the same thing.

If "Use Nodes" is disabled, the written color information should be taken from the object color.

> So I have to ask, what is the point of EVER allowing Collada files to save without the color info, ie: with "Use Nodes" turned OFF? That is a bug, actually. I was just making sure that we are talking about the same thing. If "Use Nodes" is disabled, the written color information should be taken from the object color.
Author

Hmm..

I open my material library file with Blender 2.8, located at:

C:\Program Files\Blender Foundation\Blender\2.80\scripts\addons\materials_library_vx\

"Use Nodes" is turned OFF (as expected, from above).

I turn "Use Nodes" ON and then try to save under a different file name.

Blender crashes...ICOR_1.1.blend

The attached file is the Material Library created under Blender 2.79b

Hmm.. I open my material library file with Blender 2.8, located at: C:\Program Files\Blender Foundation\Blender\2.80\scripts\addons\materials_library_vx\ "Use Nodes" is turned OFF (as expected, from above). I turn "Use Nodes" ON and then try to save under a different file name. Blender crashes...[ICOR_1.1.blend](https://archive.blender.org/developer/F8292135/ICOR_1.1.blend) The attached file is the Material Library created under Blender 2.79b
Author

In #69090#855102, @JacquesLucke wrote:

So I have to ask, what is the point of EVER allowing Collada files to save without the color info, ie: with "Use Nodes" turned OFF?

That is a bug, actually. I was just making sure that we are talking about the same thing.

If "Use Nodes" is disabled, the written color information should be taken from the object color.

Oh, OK. Sorry for the passive aggression.

> In #69090#855102, @JacquesLucke wrote: >> So I have to ask, what is the point of EVER allowing Collada files to save without the color info, ie: with "Use Nodes" turned OFF? > > That is a bug, actually. I was just making sure that we are talking about the same thing. > > If "Use Nodes" is disabled, the written color information should be taken from the object color. Oh, OK. Sorry for the passive aggression.
Bastien Montagne changed title from Collada export, "diffuse" not being assigned color when material assigned from a library to Collada export, does not take "diffuse" value from material's 'base color' when nodes are disabled 2020-01-22 09:49:07 +01:00
Gaia Clary was assigned by Bastien Montagne 2020-01-22 09:49:07 +01:00

This issue was referenced by 8fc68a2e9c

This issue was referenced by 8fc68a2e9cf1d983b3d249988ab05905bd24f06f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#69090
No description provided.